# OSDev-GCC-CLion

./: CMakeLists.txt  README.md  generate-iso.sh  toolchain.cmake
src/kernel/arch/x86/: linker.ld
src/kernel/init/: kernel.c
